updated all files

--- a/index.html
+++ b/index.html
@@ -9,7 +9,30 @@
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
-        
-        <script src="logic.js"></script>
+        <header>
+            <div class="header-container">
+                <h1>NY Real Estate Prep</h1>
+            </div>
+            <div class='scoreboard'>
+                <ul>
+                    <li class="js-number">Question #:</li>
+                    <li class="js-score">Current Score:</li>
+                </ul>
+            </div>
+        </header>
+        <main>
+            <div class="larger-container">
+                <div class="container">
+                    <p>A short quiz filled with the most commonly asked questions in the NY real estate exam. Master this and you'll be golden!</p>
+                    <div class="inner-button">
+                        <button class="js-start-btn">Start Quiz</button>
+                    </div>
+                </div>
+            </div>            
+        </main>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>    
+    <script src="store.js"></script>
+    <script src="logic.js"></script>
     </body>
 </html>
+
